# Weiming-Hu.github.io

./: .gitignore  404.html  CNAME  Cargo.toml  Dioxus.toml  _config.yml  build_gh_pages.sh  feed.xml  index.html  package-lock.json  robots.txt  sitemap.xml  start_tailwind_watch.sh
_bibliography/: papers.bib
_data/: coauthors.yml  cv.yml  repositories.yml
_includes/: header.html
_layouts/: about.html  default.html  page.html  redirect.html
_pages/: about.md  cv.md  projects.md  publications.md  repositories.md  teaching.md
_plugins/: external-posts.rb
_posts/: 2018-03-24-Codesigning-GDB.md  2018-04-04-projection-in-R.md  2018-06-27-strongly-connected-components.md  2019-03-05-latex-header-template.md  2019-03-25-remote-R-on-cheyenne.md  2019-07-01-resources-ggplot.md  2019-07-04-ggplot-example-01.md  2019-09-24-ggplot-example-02.md  2020-11-13-EnTK-Cheyenne-Setup.md  2020-11-24-matplotlib-note.md  2020-11-25-scalable-xarray-dask.md  2020-12-01-cartopy-note.md  2021-02-09-user-NPL-jupyter.md  2021-03-11-personal-signature.md  2021-06-13-DST-Dedicated-Server.md  2021-08-05-understand-swap.md  2021-08-30-scholarly-poster-guidelines.md  2022-01-13-offline-cartopy.md
_projects/: 2018-05-16-DOUG-poster.md  2018-11-06-PV-forecasts.md  2018-12-12-2018-AGU.md  2019-11-11-optimizing-locations-for-weathers.md  2020-12-05-wind-uncertainty.md  2020-12-06-IoT.md  2020-12-07-parallel-anen.md  2020-12-08-predictability-solar.md
_sass/: _base.scss
assets/: bg_light-20fbbaec3098f4b6.jpg.br  favicon-9913496e0066ec96.svg.br  favicon_uga-fcbab7f25d0acb85.ico.br  (+99 more)
(+85 files in other folders)
