[package]
name = "personal_website"
version = "0.1.11"
authors = ["Weiming Hu <weiming@uga.edu>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.3", features = ["router", "web"] }
js-sys = "0.3.77"
reqwest = { version = "0.12.22", features = ["json"] }
serde_json = "1.0.142"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Window", "Response", "console"] }

gloo = { version = "0.11" }

chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
